terraform-jenkins/firewall.tf
resource "google_compute_firewall" "jenkins_firewall" {
  name = "jenkins-firewall"
  network = var.network

  allow {
    protocol = "tcp"
    ports = ["22"]
  }

  allow {
    protocol = "tcp"
    ports = ["80"]
  }

  allow {
    protocol = "tcp"
    ports = ["8080"]
  }

  source_ranges = ["0.0.0.0/0"]
  target_tags = ["jenkins"]
}
